# chropfchroette

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: cicd.yml  docker-image.yml
app/: app.py
app/templates/: base.html  index.html
